[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main_Scene.gd" type="Script" id=1]
[ext_resource path="res://Main_Scene_Font_Small.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main_Scene_Theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )

[node name="Main_Scene" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
alignment = 2

[node name="Control" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Control"]
margin_right = 1010.0
margin_bottom = 32.0
text = "Type"
selected = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Control"]
margin_top = 36.0
margin_right = 1010.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Control/PanelContainer"]
margin_right = 1010.0
margin_bottom = 526.0
mouse_filter = 2
color = Color( 0.619608, 0.282353, 0.282353, 1 )

[node name="Result_Label" type="Label" parent="VBoxContainer/Control/PanelContainer"]
margin_top = 250.0
margin_right = 1010.0
margin_bottom = 276.0
text = "Result"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/Control"]
modulate = Color( 1, 1, 1, 0.623529 )
margin_top = 566.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
theme = SubResource( 2 )
text = "Click for roll hold for button toggle"
align = 1
[connection signal="item_selected" from="VBoxContainer/Control/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="gui_input" from="VBoxContainer/Control/PanelContainer" to="." method="_on_PanelContainer_gui_input"]
